--- a/NPSSOnlineRecruitmentPortal/Web.config
+++ b/NPSSOnlineRecruitmentPortal/Web.config
@@ -36,6 +36,7 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
 
+    <add key="aspnet:MaxJsonDeserializerMembers" value="50000000" />
     <add key="NetworkCredentialUserName" value="MUNCIPAL SCHOOL BOARD" />
     <add key="FromMail" value="salary.amcschoolboard@gmail.com" />
     <add key="NetworkCredentialPassword" value="msb_idea_999" />
